update: changed factors with the timer
